Refine gen_data for use by ecl code.
Signed-off-by: RogerDev <Roger.Dev@lexisnexisrisk.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,5 @@ where =
 install_requires = ['networkx',
                     'numpy',
                     'matplotlib',
+                    'scipy',
                     ]
