Improve accuracy of conditionalizing and other probability improvements.
Signed-off-by: RogerDev <devroger@yahoo.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,13 +17,9 @@ classifiers =
 [options]
 
 packages = find:
-python_requires = >=3.6
-
-[options.packages.find]
-where = 
-
-install_requires = ['networkx',
-                    'numpy',
-                    'matplotlib',
-                    'scipy',
-                    ]
+python_requires = >=3.6 
+install_requires = networkx
+                    numpy
+                    matplotlib
+                    scipy
+                    
