Improvements to install and README
Signed-off-by: Roger Dev <roger.dev@lexisnexisrisk.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,4 +22,7 @@ install_requires = networkx
                     numpy
                     matplotlib
                     scipy
+                    python-dateutil==2.8.2
+                    pandas
+                    scikit-learn
                     
